--- a/javascript入门篇/window.open.html
+++ b/javascript入门篇/window.open.html
@@ -1,7 +1,8 @@
 <script>
     window.open('http://www.baidu.com', '_black', 'width=400,height=300,top=100,left=100,status=yes')
         /*  部分参数
-        _black 在新窗口显示目标网页
+        _blank 在新窗口显示目标网页
+        _black 在新窗口中打开，如果该标签存在，则打开该标签
         _self  在当前窗口显示目标网页 
         _top   框架网页中在上部窗口中显示目标网页
 
