--- a/javascript进阶篇/日期对象Date.html
+++ b/javascript进阶篇/日期对象Date.html
@@ -1,16 +1,16 @@
 <script>
     /*
             Date对象常用处理方法
-                    get/setDate()              返回/设置日期
-                    get/setFullYear()          返回/设置年份，用四位数表示
-                    get/setYear()              返回/设置年份
-                    get/setMonth()             返回/设置月份 0一月;1二月;2三月--------11十二月
-                    get/setDay()               返回/设置星期 0星期天;1星期一;---------6星期六 
-                    get/setHours()             返回/设置小时，24小时制
-                    get/setminutes()           返回/设置分钟数
-                    get/setSeconds()           返回/设置秒钟数
-                    get/setTime()              返回/设置时间(单位毫秒)
-                    */
+     get/setDate()              返回/设置日期
+     get/setFullYear()          返回/设置年份，用四位数表示
+     get/setYear()              返回/设置年份
+     get/setMonth()             返回/设置月份 0一月;1二月;2三月--------11十二月
+     get/setDay()               返回/设置星期 0星期天;1星期一;---------6星期六 
+     get/setHours()             返回/设置小时，24小时制
+     get/setMinutes()           返回/设置分钟数
+     get/setSeconds()           返回/设置秒钟数
+     get/setTime()              返回/设置时间(单位毫秒)
+     */
     var mydate = new Date();
     document.write(mydate + "<br>"); //输出当前时间
     document.write(mydate.getFullYear() + "<br>"); //输出当前年份
