--- a/js2/window对象.html
+++ b/js2/window对象.html
@@ -1,24 +1,24 @@
 <script>
     /*
-                常用浏览器对象方法
-                alert()          显示带有一段消息和一个确认按钮的警告框
-                prompt()         显示可提示用户输入的对话框
-                confirm()        显示带有一段消息以及确认按钮和取消按钮的对话框
-                open()           打开一个新的浏览器窗口或查找一个已命名的窗口
-                close()          关闭浏览器窗口
-                print()          打印当前窗口内容
-                focus()          把键盘焦点给予一个窗口
-                blur()           把键盘焦点从顶层窗口移开
-                moveBy()         可相对窗口的当前坐标把它移动指定的像素
-                moveTo()         把窗口的左上角移动到一个指定的坐标
-                resizeTo()       把窗口的大小调整到指定的宽度和高度
-                scrollBy()       按照指定的像素值来滚动内容
-                scrollTo()       把内容滚动到指定的坐标
-                setInterval()    每隔指定的时间执行代码
-                setTinmeout()    在指定的延迟时间之后来执行代码
-                clearInterval()  取消setInterval()的设置
-                clearTimeout()   取消setTimeout()的设置
-                */
+                    常用浏览器对象方法
+                    alert()          显示带有一段消息和一个确认按钮的警告框
+                    prompt()         显示可提示用户输入的对话框
+                    confirm()        显示带有一段消息以及确认按钮和取消按钮的对话框
+                    open()           打开一个新的浏览器窗口或查找一个已命名的窗口
+                    close()          关闭浏览器窗口
+                    print()          打印当前窗口内容
+                    focus()          把键盘焦点给予一个窗口
+                    blur()           把键盘焦点从顶层窗口移开
+                    moveBy()         可相对窗口的当前坐标把它移动指定的像素
+                    moveTo()         把窗口的左上角移动到一个指定的坐标
+                    resizeTo()       把窗口的大小调整到指定的宽度和高度
+                    scrollBy()       按照指定的像素值来滚动内容
+                    scrollTo()       把内容滚动到指定的坐标
+                    setInterval()    每隔指定的时间执行代码
+                    setTimeout()    在指定的延迟时间之后来执行代码
+                    clearInterval()  取消setInterval()的设置
+                    clearTimeout()   取消setTimeout()的设置
+                    */
     //------------------------------------------------------------
     var attime;
 
